--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "@angular/cli": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "typescript": "~3.4.3"
   },
  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+   "preinstall": "npm install -g @angular/cli@8.1.0 @angular/compiler-cli@8.1.0 typescript@3.4.3 @angular-devkit/build-angular@0.801.0"
   },
   "eslintConfig": {
     "extends": [
